--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1> This is my second repo</h1>
     <h2> Hello, this is my website</h2>
     <h3> I'm Hafsa</h3>
-    <img src="audrey hepburn on Tumblur.png"
+    <img src="audrey hepburn on Tumblr.png"> <alt= "audrey">
 </body>
 </html>
