--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <h1> This is my second repo</h1>
+    <h1 text align="center">This is my second repo</h1>
     <h2> Hello, this is my website</h2>
     <h3> I'm Hafsa</h3>
     <img src="audrey hepburn on Tumblr.png"> <alt= "audrey">
